--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
         <li><a href="http://localhost/3.html">javascript</a></li>
       </ol>
     </nav>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138445875-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-138445875-1');
+    </script>
+
   </body>
 </html>
